--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -11,13 +11,13 @@
   
   .box {
     background-color: #800080;
-  }
+  } */
   
   /* .box:nth-child(1)  {
     background-color: red;
   } */
   
-  .box:nth-child(1) {
+  /* .box:nth-child(1) {
     position: relative;
   }
   
@@ -42,13 +42,13 @@
     height: 50%;
     background-color:  #800080;
   }
-  
+   */
   
   /* .box:nth-child(2) {
     background-color: yellow;
   } */
   
-  .box:nth-child(2) {
+  /* .box:nth-child(2) {
     position: relative;
   }
   
@@ -74,13 +74,13 @@
   .box:nth-child(2)::after {
     right: 0;
     background-color: #800080;
-  }
+  } */
 
   /* .box:nth-child(3) {
     background-color: green;
   } */
 
-  .box:nth-child(3) {
+  /* .box:nth-child(3) {
     position: relative;
   }
   
@@ -111,5 +111,83 @@
     width: 50%;
     height: 50%;
     background-color:#800080;
+  }
+  
+  .circle {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(10px,-50%);
+    border-radius: 50%;
+    border: 2px solid red;
+    background-color: black;
+  }
+
+  .circle .b{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border-radius: 50%;
+    border: 15px solid white;
+    background-color: yellow;
+  } */
+
+
+  /*img {
+   display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  max-height: 100%; 
+
+  float: left;
+  max-width: 100%;
+  max-height: 100%;
+  }*/
+
+ /* .img {
+  width: 350px;
+  height: 350px;
+  border-radius: 50%;
+  overflow: hidden; ẩn đi nếu ảnh vượt qua width và height
+  }
+  
+  .img img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /*tự động co giãn ảnh
+  }*/
+  
+  /* img {
+    transform: rotate(90deg);
+  } */
+
+  .img {
+    width: 350px;
+    height: 350px;
+    overflow: hidden;
+  }
+  
+  .img img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    animation: rotate 5s linear infinite;
+  }
+  
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
   
